Fix some include mistakes and make some coding style tweaks to WebKit and WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=208099

Reviewed by Antti Koivisto.

Source/WebKit:

* WebProcess/FullScreen/WebFullScreenManager.cpp: Removed some unneeded includes.

* WebProcess/WebCoreSupport/WebChromeClient.cpp: Removed some unneeded includes.
(WebKit::WebChromeClient::createDataListSuggestionPicker): Pass references.

* WebProcess/WebCoreSupport/WebDataListSuggestionPicker.cpp:
(WebKit::WebDataListSuggestionPicker::WebDataListSuggestionPicker): Take references
instead of pointers, since they must both be non-null.
(WebKit::WebDataListSuggestionPicker::handleKeydownWithIdentifier): Updated
to use reference.
(WebKit::WebDataListSuggestionPicker::didSelectOption): Ditto.
(WebKit::WebDataListSuggestionPicker::didCloseSuggestions): Ditto.
(WebKit::WebDataListSuggestionPicker::close): Ditto.
(WebKit::WebDataListSuggestionPicker::displayWithActivationType): Ditto.

* WebProcess/WebCoreSupport/WebDataListSuggestionPicker.h: Marked the class
final, made more functions private, use references instead of pointers,
renamed m_dataListSuggestionsClient to m_client since there is only one
client we are dealing with in this class.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::setActiveDataListSuggestionPicker): Take reference.
* WebProcess/WebPage/WebPage.h: Updated for the above.

Source/WebKitLegacy/mac:

* DOM/DOMDocument.mm: Removed unneeded includes and re-sorted.
* DOM/DOMDocumentFragment.mm: Ditto.
* DOM/DOMHTMLFieldSetElement.mm: Ditto.

Tools:

* WebKitTestRunner/InjectedBundle/mac/AccessibilityNotificationHandler.mm:
Sorted includes the traditional way. Added an include of AccessibilityCommonMac.h
so we can use the -[NSString createJSStringRef] method.
(-[NSString createJSStringRef]): Deleted. This is a duplicate of the method
defined in AccessibilityCommonMac.mm, and was causing a linker warning.

Canonical link: https://commits.webkit.org/221058@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257191 268f45cc-cd09-0410-ab3c-d52691b4dbfc