Source/WebKitLegacy/mac/DOM/DOMDocumentFragment.mm
@@ -27,19 +27,10 @@
 
 #import "DOMElementInternal.h"
 #import "DOMHTMLCollectionInternal.h"
-#import "DOMNodeInternal.h"
-#import "DOMNodeListInternal.h"
-#import <WebCore/DocumentFragment.h>
-#import <WebCore/Element.h>
 #import "ExceptionHandlers.h"
-#import <WebCore/HTMLCollection.h>
+#import <WebCore/DocumentFragment.h>
 #import <WebCore/JSExecState.h>
-#import <WebCore/NameNodeList.h>
-#import <WebCore/NodeList.h>
 #import <WebCore/ThreadCheck.h>
-#import <WebCore/WebScriptObjectPrivate.h>
-#import <wtf/GetPtr.h>
-#import <wtf/URL.h>
 
 #define IMPL static_cast<WebCore::DocumentFragment*>(reinterpret_cast<WebCore::Node*>(_internal))
 
